--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h1>Welcome to My Personal Website</h1>
   </header>
   <nav class="nav-links">
-    <a href="biodata.html">Biodata</a>
-    <a href="hobbies.html">Hobbies</a>
-    <a href="campus-life.html">Campus Life</a>
+    <a href="Biodata.html">Biodata</a>
+    <a href="Hobbies.html">Hobbies</a>
+    <a href="Campus-Life.html">Campus Life</a>
   </nav>
 </body>
 </html>
