--- a/Biodata.html
+++ b/Biodata.html
@@ -10,11 +10,11 @@
     <h1>My Biodata</h1>
   </header>
   <main class="container">
-    <img src="images/profile.jpg" alt="My Profile Picture" class="profile-pic" />
+    <img src="aqil.jpg" alt="My Profile Picture" class="profile-pic" />
     <div>
       <p><strong>Name:</strong> John Doe</p>
       <p><strong>Age:</strong> 22</p>
-      <p><strong>Course:</strong> Bachelor of Computer Science</p>
+      <p><strong>Course:</strong> Bachelor of Information Technology</p>
       <p><strong>Email:</strong> john@example.com</p>
     </div>
   </main>
