--- a/Biodata.html
+++ b/Biodata.html
@@ -12,10 +12,10 @@
   <main class="container">
     <img src="aqil.jpg" alt="My Profile Picture" class="profile-pic" />
     <div>
-      <p><strong>Name:</strong> John Doe</p>
-      <p><strong>Age:</strong> 22</p>
+      <p><strong>Name:</strong> Aiman Aqil Bin Md Din</p>
+      <p><strong>Age:</strong> 24</p>
       <p><strong>Course:</strong> Bachelor of Information Technology</p>
-      <p><strong>Email:</strong> john@example.com</p>
+      <p><strong>Email:</strong> aimanmddin@gmail.com</p>
     </div>
   </main>
   <footer>
