--- a/Hobbies.html
+++ b/Hobbies.html
@@ -11,12 +11,12 @@
   </header>
   <main class="container">
     <ul>
-      <li>Photography</li>
-      <li>Coding and Web Development</li>
+      <li>Futsal</li>
+      <li>Healing</li>
       <li>Traveling</li>
-      <li>Gaming</li>
+
     </ul>
-    <img src="images/hobby.jpg" alt="Photography" class="wide-img" />
+    <img src="aqil2.jpg" alt="Photography" class="wide-img" />
   </main>
   <footer>
     <a href="index.html">Back to Home</a>
