--- a/Biodata.html
+++ b/Biodata.html
@@ -10,7 +10,7 @@
     <h1>My Biodata</h1>
   </header>
   <main class="container">
-    <img src="aqil.jpg" alt="My Profile Picture" class="profile-pic" />
+    <img src="aqil3.jpg" alt="My Profile Picture" class="profile-pic" />
     <div>
       <p><strong>Name:</strong> Aiman Aqil Bin Md Din</p>
       <p><strong>Age:</strong> 24</p>
