--- a/Campus-Life.html
+++ b/Campus-Life.html
@@ -11,12 +11,9 @@
   </header>
   <main class="container">
     <div class="gallery">
-      <img src="images/event1.jpg" alt="Event 1" />
-      <img src="images/event2.jpg" alt="Event 2" />
-      <img src="images/event3.jpg" alt="Event 3" />
     </div>
-    <p>I’ve attended tech conferences, joined coding bootcamps, and enjoyed cultural festivals with my peers!</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/samplevideo" frameborder="0" allowfullscreen></iframe>
+    <p>"I enjoy spending time studying and relaxing with my friends—it’s my favorite way to recharge and unwind.</p>
+    <img src="aqil4.jpg" alt="Photography" style="width: 200px; height: auto;"/>
   </main>
   <footer>
     <a href="index.html">Back to Home</a>
