--- a/Hobbies.html
+++ b/Hobbies.html
@@ -16,7 +16,7 @@
       <li>Traveling</li>
 
     </ul>
-    <img src="aqil2.jpg" alt="Photography" class="wide-img" />
+    <img src="aqil2.jpg" alt="Photography" style="width: 200px; height: auto;"/>
   </main>
   <footer>
     <a href="index.html">Back to Home</a>
